# frutti2d

./: .directory  README.md  push.sh  test.c
include/f2d/: camera.h  draw.h  error.h  frutti2d.h  keys.h  model.h  shader.h  threads.h
include/f2d/math/: mat4.h  vector.h
include/f2d/wm/: events.h  window.h  wm.h
include/game/: draw.h  frutti2d.h  keys.h  macros.h  shader.h  texture.h  threads.h
include/game/file/: bmp.h
include/game/wm/: events.h  window.h  wm.h
shaders/: tex.frag  tex.vert
src/: CMakeLists.txt
src/f2d/: camera.c  draw.c  error.c  frutti2d.c  main.c  model.c  shader.c  texture.c  threads.c
src/f2d/file/: bmp.c  new file~
src/f2d/math/: mat4.c  vector.c
src/f2d/wm/: events.c  window.c  wm.c
src/game/: .directory  draw.c  frutti2d.c  main.c  shader.c  texture.c  threads.c
src/game/file/: bmp.c
src/game/wm/: events.c  window.c  wm.c
